Fix random horizontal scrolling?

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ img {
 }
 html {
     background-color: rgb(240, 240, 240);
+    overflow-x: hidden;
 }
 body {
     width: 100%;
